# packages.animation

./: README.md  pyproject.toml
animation/: animation.py
tests/: test_animation.py
