[tool.poetry]
name = "animation"
version = "0.1.0"
description = ""
authors = ["svenviktorjonsson <svenviktorjonsson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
